--- a/app/src/main/res/layout/activity_section_c3.xml
+++ b/app/src/main/res/layout/activity_section_c3.xml
@@ -1152,7 +1152,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:layout_weight="1"
-                    android:text="@string/dkn" />
+                    android:text="@string/dkndrem" />
 
             </RadioGroup>
 
