--- a/app/src/main/res/layout/activity_section_c3.xml
+++ b/app/src/main/res/layout/activity_section_c3.xml
@@ -909,9 +909,10 @@
 
             </RadioGroup>
 
+            javed
 
             <!--kc313a-->
-            <TextView
+            <!--<TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
@@ -951,7 +952,7 @@
                     android:layout_weight="1"
                     android:text="@string/dkndrem" />
 
-            </RadioGroup>
+            </RadioGroup>-->
 
 
             <!--kc313-->
